@@ -1,3 +1,7 @@
+2006-01-02 Perry
+ PATCH: [ 1392647 ] Prefix members with m_ in storage_for_plugins
+  Src/Common: multiformatText.cpp multiformatText.h
+
 2006-01-01 Kimmo
  PATCH: [ 1394759 ] Allows quotes in Rational ClearCase checkout comment
   Submitted by Gal Hammer
